--- a/index.html
+++ b/index.html
@@ -13,41 +13,35 @@
 <body>   
 <div class="container">
     <h1>Spacewoman</h1>
-     <h2>Guess the word</h2>
-     
+     <h2>Guess the word by typing in a letter</h2>
+      <p class="hint">Hint: </p>
  </div>
- <p id="displayword"></p> 
-  <ul>
-    <li>_</li>
-    <li>_</li>
-    <li>_</li>
-    <li>_</li>
-    <li>_</li>
-    <li>_</li>
-    <li>_</li>
-    <li>_</li>
-  </ul>
+<div>
+ <p id="displayWord" class="hidden"></p> 
+  
+ <div id=placeholders></div>
+  </div>
 
- <p>Click a the letter to try and guess the word.</p>
+  <input type="text"
+           maxlength="1"
+           id="insert-letter"><br></input>
 
-    </div> 
- <div class="container">
-     <div id="keyboard">
-        <div class="letters">
-            <button>a</button><button>b</button><button>c</button><button>d</button><button>e</button>
-            <button>f</button><button>g</button><button>h</button><button>i</button><button>j</button>
-            <button>k</button><button>l</button><button>m</button><button>n</button><button>o</button>
-            <button>p</button><button>q</button><button>r</button><button>s</button><button>t</button>
-            <button>u</button><button>v</button><button>w</button><button>x</button><button>y</button>
-            <button>z</button>
-        </div>
-     </div>
-     <p id=incorrectguess></p>
-     <!-- <p id="clue">Here's a clue -</p> -->
+<div class="try again alert">
+    <span id="typeNewLetter" class ="hidden"></span>
+</div>
+     <button id="try">
+     Try letter
+     </button>
+
+     <p id="incorrectguess">Incorrect guesses: <span id="igcount">0</span>/6</p>
+
       <canvas id="spacewoman"></canvas>
-     <div class="container">
-       <button id="hint">Hint</button>
-       <button id="reset">Play again</button>
+
+      <div class="container">
+
+       <!-- <button id="hint">Hint</button> -->
+
+       <button id="reset" onClick="window.location.reload()">Play again</button>
      </div>
  </div>
 </body>
