--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  </div>
 
 
-       <h3 id="displayWord"style="display:none;"></h3>
+       <h3 id="displayAnswer"></h3>
  
  <div id=placeholders></div>
 
