--- a/index.html
+++ b/index.html
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spacewoman</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Honk&family=Kaushan+Script&family=Love+Ya+Like+A+Sister&family=Protest+Riot&family=Redressed&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Honk&family=Kaushan+Script&family=Love+Ya+Like+A+Sister&family=Protest+Riot&family=Redressed&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/main.js"></script>
 </head>
-<body>   
-<div class="container">
-    <h1>Spacewoman</h1>
-     <h2>Guess the word by typing in a letter</h2>
-      <p class="hint">Hint: </p>
- </div>
-      
- <div id=placeholders></div>
-      <input type="text"
-           maxlength="1"
-           id="insert-letter"><br></input>
-        <h3 id="winAlert"></h3>
-        <h3 id="displayAnswer"></h3>
+
+<body>
+    <div class="container">
+        <h1>Spacewoman</h1>
+        <h2>Guess the word by typing in a letter</h2>
+        <p class="hint">Hint: </p>
+    </div>
+
+    <div id=placeholders></div>
+    <input type="text" maxlength="1" id="insert-letter"><br></input>
+    <h3 id="winAlert"></h3>
+    <h3 id="displayAnswer"></h3>
     <p id="try-again"></p>
-    <p id ="good-job"></p>
+    <p id="good-job"></p>
 
     <span id="typeNewLetter"></span>
-</div>
-     <button id="try">
-     Try letter
-     </button>
+    </div>
+    <button id="try">
+        Try letter
+    </button>
 
-     <h3></h3>
-     <h3 id="guesscount"></h3>
-      <canvas id="spacewoman"></canvas>
-      <div id="container">
-       <button id="reset" onClick="window.location.reload()">Play again</button>
-     </div>
- </div>
+    <h3></h3>
+    <h3 id="guesscount"></h3>
+    <canvas id="spacewoman"></canvas>
+    <div id="container">
+        <button id="reset" onClick="window.location.reload()">Play again</button>
+    </div>
+    </div>
 </body>
+
 </html>
- 
- 
-
-
- 
