--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div id=placeholders></div>
-    <input type="text" maxlength="1" id="insert-letter"><br></input>
+    <input type="text" maxlength="1" id="insert-letter" autofocus><br></input>
     <h3 id="winAlert"></h3>
     <h3 id="displayAnswer"></h3>
     <p id="try-again"></p>
@@ -36,11 +36,10 @@
 
     <h3></h3>
     <h3 id="guesscount"></h3>
-    <canvas id="spacewoman"></canvas>
+    <canvas id="spacewoman"><img id="canvas-img" src="https://totemsurftribe.files.wordpress.com/2024/02/img_1983-2.jpg?resize=438%2C438" style="display: none;"></canvas>
     <div id="container">
         <button id="reset" onClick="window.location.reload()">Play again</button>
     </div>
     </div>
 </body>
-
 </html>
