Add image fading for canvas, update letter display, fix guess count

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <h3 id="displayAnswer"></h3>
     <p id="try-again"></p>
     <p id="good-job"></p>
+    
+    <div id="incorrect-guesses">
+      </div>
 
     <span id="typeNewLetter"></span>
     </div>
@@ -36,7 +39,9 @@
 
     <h3></h3>
     <h3 id="guesscount"></h3>
-    <canvas id="spacewoman"><img id="canvas-img" src="https://totemsurftribe.files.wordpress.com/2024/02/img_1983-2.jpg?resize=438%2C438" style="display: none;"></canvas>
+    <canvas id="spacewoman" class="canvas-faded">
+        <img id="canvas-img" src="https://totemsurftribe.files.wordpress.com/2024/02/img_1983-2.jpg?resize=438%2C438">
+      </canvas>
     <div id="container">
         <button id="reset" onClick="window.location.reload()">Play again</button>
     </div>
